android-platform-libcore (6.0.1+r16-1) UNRELEASED; urgency=medium

  [ Hans-Christoph Steiner ]
  * New upstream release to sync with all android-tools projects

  [ Kai-Chung Yan ]
  * New package: android-platform-libcore-source
  * Set JARs to version 0 (Upstream never version it)
  * Add groupId to JAR filename (Upstream does not name them)
  * Rename package: libdex-java => libandroid-dex-java
  * d/control: Move all BD-Indep to BD since there is no arch packages
  * d/copyright: Refinements
  * New package: libandroid-luni-java
  * Remove package: libandroid-dex-java-doc since it is included in
    libandroid-java-doc

 -- Kai-Chung Yan <seamlikok@gmail.com>  Thu, 18 Feb 2016 20:35:30 +0800

android-platform-libcore (6.0.1+r10-2) unstable; urgency=medium

  * d/control: Standards-Version => 3.9.7 (No change)
  * d/rules: Remove unused javahelper override
  * Use javahelper to install Javadoc
  * Fix Vcs-Git

 -- Kai-Chung Yan <seamlikok@gmail.com>  Thu, 04 Feb 2016 21:40:03 +0800

android-platform-libcore (6.0.1+r10-1) unstable; urgency=low

  * Initial release (Closes: #795995)

 -- Kai-Chung Yan <seamlikok@gmail.com>  Fri, 15 Jan 2016 17:20:44 +0800