@@ -3,18 +3,22 @@
 include /usr/share/dpkg/pkg-info.mk
 
 UPSTREAM_TAG = android-$(subst +,_,$(DEB_VERSION_UPSTREAM))
-GRADLE_OPTIONS = --settings-file debian/settings.gradle --offline \
+GRADLE_FLAGS = --settings-file debian/settings.gradle --offline \
                  --gradle-user-home debian/.gradlehome
+ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+  NUMTHREADS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+  GRADLE_FLAGS += --parallel --max-workers=$(NUMTHREADS)
+endif
 
 %:
 	dh $@ --with maven_repo_helper,javahelper
 
 override_dh_auto_build:
-	gradle $(GRADLE_OPTIONS) assemble poms :json:javadoc
+	gradle $(GRADLE_FLAGS) assemble poms :json:javadoc
 
 override_dh_auto_clean:
 	dh_auto_clean
-	gradle $(GRADLE_OPTIONS) clean
+	gradle $(GRADLE_FLAGS) clean
 	$(RM) -r debian/.gradle debian/.gradlehome .gradle
 	$(RM) debian/*.pom
 
