@@ -13,6 +13,7 @@ android-platform-libcore (6.0.1+r16-1) UNRELEASED; urgency=medium
   * New package: libandroid-luni-java
   * Remove package: libandroid-dex-java-doc since it is included in
     libandroid-java-doc
+  * Enable parallel build for Gradle
 
  -- Kai-Chung Yan <seamlikok@gmail.com>  Thu, 18 Feb 2016 20:35:30 +0800
 
